# M-heat

./: .gitignore  .gitmodules  LICENSE  README.md
Hardware/3DFile/: Bed.step  外壳.step  隔热板.dxf
Hardware/PCB/: Bed.pcbdoc  Bed.pcbdoc.htm  M-heat.PrjPcb  Sheet1.SchDoc  struct_board.PcbDoc
Image/: u=2338905463,946282655&fm=193.jfif
Software/esp32/: sdkconfig  sdkconfig.old
Software/esp32/components/QRcode/: CMakeLists.txt  qrcodegen.h
Software/esp32/components/adc/: CMakeLists.txt  adc.c  adc.h
Software/esp32/components/astra_ui/: CMakeLists.txt  astra_ui_core.c  astra_ui_core.h  astra_ui_draw_driver.c  astra_ui_draw_driver.h  astra_ui_drawer.c  astra_ui_item.c  u8g2_font_myfont.c
Software/esp32/components/beep/: CMakeLists.txt  beep.c  beep.h
Software/esp32/components/externdraw/: CMakeLists.txt  bitmap.c  bitmap.h  externdraw.c  externdraw.h
Software/esp32/components/firetool_PID_adaptor/: CMakeLists.txt
Software/esp32/components/heater/: CMakeLists.txt  heater.c  heater.h
Software/esp32/components/nvs/: CMakeLists.txt  nvs_data.c  nvs_data.h
Software/esp32/components/rotary_encoder/: CMakeLists.txt  rotary_encoder.c  rotary_encoder.h
Software/esp32/components/timer/: CMakeLists.txt  timer.c  timer.h
Software/esp32/components/u8g2/csrc/: u8g2.h  u8g2_font_myfont.c
Software/esp32/components/wifi/: CMakeLists.txt  wifi.c  wifi.h
Software/esp32/main/: CMakeLists.txt  M-heart.c  M-heat.c  M-heat.h  hello_world_main.c  i2ctools_example_main.c
